--- a/calstyle.css
+++ b/calstyle.css
@@ -75,18 +75,18 @@ ul.list-cal {
 }
 
 li.list-cal {
-  font-size: 77px;
+  font-size: 57px;
   display: inline-block;
   opacity: 0.2;
   transition: 0.3s;
-  padding: 10px 33px;
+  padding: 0px 33px;
   /* z-index: 100; */
   position: relative;
-  /* margin: 0 19px; */
+  margin: 0 13px;
 }
 
 li.list-cal:hover {
-  opacity: 1 ;
+  opacity: 1;
   transition: 0.3s opacity ease;
   position: relative;
 }
@@ -137,8 +137,8 @@ img.op1.bx1 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: 68%;
-  right: -92%;
+  top: 50%;
+  right: -145%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -149,8 +149,8 @@ img.op2.bx2 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: 68%;
-  right: 7%;
+  top: -50%;
+  right: -145%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -161,8 +161,8 @@ img.op3.bx3 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: 68%;
-  right: 108%;
+  top: -122%;
+  right: -145%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -173,8 +173,8 @@ img.op4.bx4 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: -32%;
-  right: -92%;
+  top: -222%;
+  right: -145%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -184,8 +184,8 @@ img.op5.bx5 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: -32%;
-  right: 8%;
+  top: -305%;
+  right: -145%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -196,8 +196,8 @@ img.op6.bx6 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: -32%;
-  right: 108%;
+  top: -402%;
+  right: -141%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -208,8 +208,8 @@ img.op7.bx7 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: -132%;
-  right: -92%;
+  top: 50%;
+  right: 146%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -220,8 +220,8 @@ img.op8.bx8 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: -132%;
-  right: 9%;
+  top: -4%;
+  right: 146%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -232,8 +232,8 @@ img.op9.bx9 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: -132%;
-  right: 109%;
+  top: -107%;
+  right: 146%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -244,8 +244,8 @@ img.op10.bx10 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: -232%;
-  right: -93%;
+  top: -170%;
+  right: 146%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -256,8 +256,8 @@ img.op11.bx11 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: -232%;
-  right: 8%;
+  top: -298%;
+  right: 146%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -268,8 +268,8 @@ img.op12.bx12 {
   position: absolute;
   display: none;
   transition: 0.3s;
-  top: -232%;
-  right: 109%;
+  top: -448%;
+  right: 146%;
   border-radius: 4px;
   border: 10px solid white;
   border-bottom: 40px solid;
@@ -285,4 +285,6 @@ span.cat img {
   display: inline-block;
 }
 
-
+li a img {
+  width: 95% !important;
+}
